<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/title_email"
    tools:context=".ui.behavior.BehaviorFragment">

<!--    <EditText-->
<!--        android:id="@+id/nameEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="90dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="90dp"-->
<!--        android:autofillHints="@string/title_enter_name"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/title_enter_name"-->
<!--        android:inputType="textPersonName"-->
<!--        android:minHeight="48dp"-->
<!--        android:textColorHint="#757575"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/phoneEditText"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="90dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="90dp"-->
<!--        android:autofillHints="@string/title_enter_number"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/title_enter_number"-->
<!--        android:inputType="phone"-->
<!--        android:minHeight="48dp"-->
<!--        android:textColorHint="#757575"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />-->

    <TextView
        android:id="@+id/varietyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title_code_variety"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pushButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/title_push_notification"
        app:layout_constraintEnd_toStartOf="@+id/qrButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeButton" />

    <Button
        android:id="@+id/qrButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:text="@string/title_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pushButton"
        app:layout_constraintTop_toBottomOf="@+id/codeButton" />

    <ImageView
        android:id="@+id/emailImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/title_email"
        android:src="@drawable/sticker_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pushButton" />

    <Button
        android:id="@+id/codeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="2dp"
        android:text="@string/title_get_code"
        app:layout_constraintBottom_toTopOf="@+id/pushButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/varietyTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>